--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "jsonwebtoken": "^8.2.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-google-maps": "^9.4.5",
+    "react-modal": "^3.4.4",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
