--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cookie-session": "^2.0.0-beta.3",
     "jsonwebtoken": "^8.2.1",
     "react": "^16.3.1",
+    "react-aria-modal": "^2.12.2",
     "react-dom": "^16.3.1",
     "react-google-maps": "^9.4.5",
     "react-modal": "^3.4.4",
