--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-modal": "^3.4.4",
     "react-redux": "^5.0.7",
     "react-redux-loading": "^1.0.1",
+    "react-responsive-carousel": "^3.1.40",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
