--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-responsive-carousel": "^3.1.40",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-s-alert": "^1.4.1",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0"
